--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve dist -l $PORT"
   },
   "dependencies": {
     "naive-ui": "^2.41.0",
     "pinia": "^3.0.2",
+    "serve": "^14.2.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
